<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">AndSwtch</string>

<!-- MAIN -->
  <string name="refresh">Last Refresh:</string>
  <string name="notConnected">Not Connected</string>
  <string name="switchAllOn">Switch All On</string>
  <string name="allOn">on all</string>
  <string name="switchAllOff">Switch All Off</string>
  <string name="allOff">off all</string>
  
<!-- POWERPOINTVIEW -->
  <string name="hours">Hours</string>
  <string name="minutes">Minutes</string>
  <string name="seconds">Seconds</string>
  <string name="onOffDelay">Start Delay</string>
  <string name="restartDelay">Restart Delay</string>
  <string name="setTime">Choose Time</string>
  <string name="cancelDelayedOff">Cancel</string>
  <string name="endTime">End Time: </string>
  
<!-- Error messages --> 
  <!--  network errors --> 
  <string name="errorConnectionTimeOut">Connection Timed Out</string>
  <string name="errorNoConnection">failed to send the command, are you connected to a network?</string>
  <string name="errorNoNetworkPermission">no network permission</string>
  
  <!-- response processor errors -->
  <string name="errorWrongPowerpoint">error while parsing respose: powerpoint wrong</string>
  <string name="errorUserPassword">Error occured: check username and password</string>
  <string name="errorPowerpointNames">Response didnt match pattern: please check powerpoint names with the aid of the webinterface</string>
<!-- OM - OptionsMenu -->	
	<string name="om_refresh">Refresh</string>
	<string name="om_settings">Settings</string>
	<string name="om_exit">Exit</string>

<!-- PS - PreferenceScreen -->
<!-- CAT - Category --><!-- SUM - Summary --><!-- DEF - Default -->
<!-- PORT-SETTINGS -->
  <string name="ps_cat_portsettings">Port Settings</string>
  <string name="ps_senderport_key">SenderPort</string>
  <string name="ps_senderport">App Sender Port</string>
  <string name="ps_senderport_sum">Change the applications sender port number</string>
	<string name="ps_senderport_def">1132</string>
  <string name="ps_senderport_dm">Valid applications Sender Port [Default:1132]</string>
  	
  <string name="ps_receiverport_key">ReceiverPort</string>
	<string name="ps_receiverport">App Receiver Port</string>
	<string name="ps_receiverport_sum">Change the applications receiver port number</string>
	<string name="ps_receiverport_def">1133</string>
	<string name="ps_receiverport_dm">Valid application receiver port [Default:1133]</string>

<!-- IP-SETTINGS -->	
	<string name="ps_cat_ipsettings">IP Settings</string>
  <string name="ps_ipaddress_key">IP</string>
	<string name="ps_ipaddress">IP Address</string>
	<string name="ps_ipaddress_sum">Change the ip address</string>
	<string name="ps_ipaddress_def">192.168.178.21</string>
	<string name="ps_ipaddress_dm">Valid IP Address [Default:192.168.178.21]</string>

<!-- REFRESH-SETTINGS -->	
	<string name="ps_cat_autorefresh">Auto Refresh Settings</string>
	<string name="ps_autorefresh">Auto Refresh</string>
	<string name="ps_autorefresh_sum">Enable/Disable auto refresh</string>
	<string name="ps_autorefreshinterval">Interval</string>
	<string name="ps_autorefreshinterval_sum">Change the refresh interval in seconds</string>
	<string name="ps_autorefreshinterval_def">10</string>
	<string name="ps_autorefreshinterval_dm">Interval in seconds (Minimum:10sec) [Default:10sec]</string>

<!-- SECURITY-SETTINGS -->
  <string name="ps_cat_securitysettings">Security Settings</string>
  <string name="ps_username_key">Username</string>
  <string name="ps_username">Username</string>
  <string name="ps_username_sum">Change the username</string>
  <string name="ps_username_def">admin</string>
  <string name="ps_username_dm">[Default:admin]</string>
  <string name="ps_password_key">Password</string>
  <string name="ps_password">Password</string>
  <string name="ps_password_sum">Change the password</string>
  <string name="ps_password_def">anel</string>
  <string name="ps_password_dm">[Default:anel]</string>
  
<!-- OTHER-SETTINGS -->
	<string name="ps_cat_other">Others</string>
	<string name="ps_help">Help</string>
	
<!-- Time Picker -->

<string name="tp_title_text">Delay</string>
<string name="tp_countdown_start">Start</string>
<string name="tp_cancel_txt">Cancel</string>
</resources>
